pkg/lang/testdata/ub/outputs/valid/description.ub
outputs: {
  endpoint: { value: input.x, description: 'Public endpoint URL' }
  token:    { value: input.x, @sensitive: true, description: 'Bootstrap token' }
}
