pkg/lang/testdata/ub/outputs/invalid/duplicate-description.ub
outputs: {
  a: { value: var.x, description: 'one', description: 'two' }
}
